🛠️ fix(env): Донастроить окружение проекта

--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,12 @@ FodyWeavers.xsd
 
 appsettings.json
 appsettings.Development.json
+
+frontend/.pnp.*
+frontend/.yarn/*
+#!.yarn/cache
+#!.yarn/patches
+#!.yarn/plugins
+#!.yarn/releases
+#!.yarn/sdks
+#!.yarn/versions
