--- a/frontend/tsconfig.config.json
+++ b/frontend/tsconfig.config.json
@@ -4,10 +4,7 @@
   "compilerOptions": {
     "composite": true,
     "ignoreDeprecations": "5.0",
-    "types": [
-      "node",
-      "vite/client"
-    ],
+    "types": ["node", "vite/client"],
     "strict": true
   }
 }
