--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,7 @@
     "luxon-financial-year-data": "^1.2.0",
     "lvovich": "^2.0.2",
     "nprogress": "^0.2.0",
-    "pinia": "^2.2.6",
+    "pinia": "^2.2.8",
     "plural-ru": "^2.0.2",
     "primeicons": "^6.0.1",
     "primevue": "3.45.0",
@@ -58,11 +58,12 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.10.4",
     "@total-typescript/ts-reset": "^0.6.1",
+    "@tsconfig/node22": "^22.0.0",
     "@types/color": "^4.2.0",
     "@types/file-saver": "^2.0.7",
     "@types/jsdom": "^21.1.7",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^22.10.0",
+    "@types/node": "^22.10.1",
     "@types/sockjs-client": "^1",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
@@ -70,7 +71,7 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-typescript": "^14.1.4",
     "@vue/test-utils": "^2.4.6",
-    "@vue/tsconfig": "^0.6.0",
+    "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
     "cypress": "^13.16.0",
