--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -1,19 +1,13 @@
 {
-  // "extends": "@vue/tsconfig/tsconfig.web.json",
+  "extends": "@vue/tsconfig/tsconfig.dom.json",
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
-    "resolveJsonModule": true,
-    "module": "es2022",
+    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "baseUrl": ".",
-    "ignoreDeprecations": "5.0",
-    "moduleResolution": "Node",
-    "esModuleInterop": true,
     "paths": {
       "@/*": ["./src/*"]
-    },
-    "target": "es2019",
-    "lib": ["es2019", "dom"]
+    }
   }
 }
