--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -2,17 +2,10 @@
   "files": [],
   "references": [
     {
-      "path": "./tsconfig.config.json"
+      "path": "./tsconfig.node.json"
     },
     {
       "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.vitest.json"
     }
-  ],
-  "compilerOptions": {
-    "composite": true,
-    "strict": true
-  }
+  ]
 }
