--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@vueuse/core": "^12.0.0",
     "axios": "^1.7.8",
     "buffer": "^6.0.3",
+    "chart.js": "^4.4.7",
     "chroma-js": "^3.1.2",
     "chroma.ts": "^1.0.10",
     "devextreme": "23.2",
