Базовое окно для загрузки файлов. Доделать: шаблоны для кнопок управления (открытие, удаление), взаимодействие с сервером и серверные эндпойнты

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,10 +19,11 @@
   },
   "dependencies": {
     "@microsoft/signalr": "^8.0.7",
-    "@vee-validate/zod": "^4.14.7",
-    "@vueuse/components": "^12.0.0",
-    "@vueuse/core": "^12.0.0",
-    "axios": "^1.7.8",
+    "@types/file-size": "^1.0.3",
+    "@vee-validate/zod": "^4.15.0",
+    "@vueuse/components": "^12.4.0",
+    "@vueuse/core": "^12.4.0",
+    "axios": "^1.7.9",
     "buffer": "^6.0.3",
     "chart.js": "^4.4.7",
     "chroma-js": "^3.1.2",
@@ -32,66 +33,67 @@
     "devextreme-vue": "23.2",
     "fast-deep-equal": "^3.1.3",
     "file-saver": "^2.0.5",
+    "file-size": "^1.0.0",
     "inferno-create-element": "^8.2.3",
     "js-base64": "^3.7.7",
     "luxon": "^3.5.0",
     "luxon-financial-year-data": "^1.2.0",
     "lvovich": "^2.0.2",
     "nprogress": "^0.2.0",
-    "pinia": "^2.2.8",
+    "pinia": "^2.3.0",
     "plural-ru": "^2.0.2",
     "primeicons": "^6.0.1",
     "primevue": "3.45.0",
-    "quill": "^2.0.2",
-    "sass": "^1.81.0",
+    "quill": "^2.0.3",
+    "sass": "^1.83.4",
     "seedrandom": "^3.0.5",
     "set-manipulator": "^0.3.1",
     "tailwindcss-themer": "^4.1.1",
-    "uuid": "^11.0.3",
-    "vee-validate": "^4.14.7",
+    "uuid": "^11.0.5",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
     "vue-axios": "^3.5.2",
     "vue-meta": "^2.4.0",
     "vue-router": "^4.5.0",
-    "zod": "3.23.8",
+    "zod": "3.24.1",
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.10.4",
+    "@rushstack/eslint-patch": "^1.10.5",
     "@total-typescript/ts-reset": "^0.6.1",
     "@tsconfig/node22": "^22.0.0",
     "@types/color": "^4.2.0",
     "@types/file-saver": "^2.0.7",
     "@types/jsdom": "^21.1.7",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^22.10.1",
+    "@types/node": "^22.10.7",
     "@types/sockjs-client": "^1",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.16.0",
-    "@typescript-eslint/parser": "^8.16.0",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/eslint-config-typescript": "^14.1.4",
+    "@vue/eslint-config-typescript": "^14.3.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
-    "cypress": "^13.16.0",
-    "eslint": "^9.15.0",
-    "eslint-config-prettier": "^9.1.0",
+    "cypress": "^13.17.0",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-cypress": "^4.1.0",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-vue": "^9.31.0",
+    "eslint-plugin-prettier": "^5.2.2",
+    "eslint-plugin-vue": "^9.32.0",
     "jsdom": "^25.0.1",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.49",
-    "prettier": "^3.4.1",
-    "start-server-and-test": "^2.0.8",
-    "tailwindcss": "^3.4.15",
-    "typescript": "~5.7.2",
-    "vite": "^6.0.1",
-    "vitest": "^2.1.6",
-    "vue-tsc": "^2.1.10"
+    "postcss": "^8.5.1",
+    "prettier": "^3.4.2",
+    "start-server-and-test": "^2.0.10",
+    "tailwindcss": "^3.4.17",
+    "typescript": "~5.7.3",
+    "vite": "^6.0.7",
+    "vitest": "^2.1.8",
+    "vue-tsc": "^2.2.0"
   },
   "packageManager": "yarn@4.5.3"
 }
