--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@vueuse/components": "^12.4.0",
     "@vueuse/core": "^12.4.0",
     "axios": "^1.7.9",
+    "blob-util": "^2.0.2",
     "buffer": "^6.0.3",
     "chart.js": "^4.4.7",
     "chroma-js": "^3.1.2",
